tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/ErrorReportingTests#ErrorReportingTests(String).mjava
	public ErrorReportingTests(String description) {
		super(description);
	}

